5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1822_1648.log
== TEST (2019-06-13 10:10:43) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0
vet=zeros(p,dtype=int)
for i in f:
	if(f[i]<70):
		p=p+1

print(p)

x=0
b=0
for
	for
	for
-- ERROR:
File "XXXX", line 15
    for
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:10:52) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0
vet=zeros(p,dtype=int)
for i in f:
	if(f[i]<70):
		p=p+1

print(p)

x=0
b=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in f:
	if(f[i]<70):
		p=p+1

print(p)

x=0
b=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in f:
	if(f[i]<70):
		p=p+1

print(p)

x=0
b=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in f:
	if(f[i]<70):
		p=p+1

print(p)

x=0
b=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:19) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in f:
	if(f[i]<70):
		p=p+1

print(p)

x=0
b=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:19) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in f:
	if(f[i]<70):
		p=p+1

print(p)

x=0
b=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:19) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in f:
	if(f[i]<70):
		p=p+1

print(p)

x=0
b=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:14:33) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

x=0
b=0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:42) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in f:
	if(f[y]<70):
		x=x+1
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:51) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in f:
	if(f[y]<70):
		x=x+1
print(x)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:06) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		vet[i]=f[y]
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:59) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		vet[i]=f[x]
		x=x+1
		print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:04) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
	b=b+1
	x=x+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:16) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
		b=b+1
		x=x+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:59) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
	b=b+1
		x=x+1
print(vet)
-- ERROR:
File "XXXX", line 20
    x=x+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:03) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
		b=b+1
		x=x+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:06) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
		b=b+1
	x=x+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:16) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
		b=b+1
		x=x+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:43) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
		x=x+1
	b=b+1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:51) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
		x=x+1
		b=b+1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:58) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
	x=x+1
		b=b+1
		
print(vet)
-- ERROR:
File "XXXX", line 20
    b=b+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:10) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]	
		b=b+1
	x=x+1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:37) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[x]=vet[b]+1	
		b=b+1
		x=x+1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:01) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[y]=vet[b]
		b=b+1
		x=x+1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:27) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		f[y]=vet[b]+1
		b=b+1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:30:06) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)
x=0
b=0
for y in range(size(f)):
	if(f[y]<70):
		vet[b]=f[y]
		b=b+1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:09) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)

b=0
for y in range(size(f)):
	if(f[y]<70):
		vet[b]=f[y]
		b=b+1
vet2=zeros(size(vet),dtype=int)	
x=0
for i in range(size(f)):
	if(f[i]<70):
		vet2[x]=i
		x=x+1
print(vet2)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:37:20) 
-- CODE:
from numpy import*

f=array(eval(input("entre com o vetor:")))

p=0

for i in range(size(f)):
	if(f[i]<70):
		p=p+1

print(p)

vet=zeros(p,dtype=int)

b=0
for y in range(size(f)):
	if(f[y]<70):
		vet[b]=f[y]
		b=b+1
vet2=zeros(size(vet),dtype=int)	
x=0
for i in range(size(f)):
	if(f[i]<70):
		vet2[x]=i
		x=x+1
print(vet2)
		

-- EXECUTION TIME:
0.805565
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 2 5]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
